@@ -1,6 +1,7 @@
 Changes in openair 1.1=0 [2014-06-27]
 =====================================
 *	Add ref.y option to timeVariation for y references line(s)
+*	Fix type = "wd" labelling to corPlot
 
 Changes in openair 1.0-0 [2014-06-09]
 =====================================
